4B/cs444/tests/site/pass/pass_booleanliterals.joos
/* pass: boolean literals */
public class A {
  public A() {}
  protected boolean x = false;
}

