4B/cs444/tests/site/fail/fail_privatefields.joos
/* fail: private fields */
public class A {
  private int x;
}

